--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
-                        <h2 class="block-title"> Kuliner Indonesia </h2>
+                        <h2 class="block-title"> Kuliner India </h2>
                         <h3>Pengertian Kuliner: </h3>
                         <p> Dalam perkembangannya, penggunaan istilah kuliner digunakan untuk berbagai macam kegiatan, seperti seni kuliner yaitu seni persiapan, memasak dan penyajian makanan, biasanya dalam bentuk makanan.. </p>
 
