--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                             <div id="navbar" class="navbar-collapse collapse">
                                 <ul class="nav navbar-nav navbar-right">
                                     <li class="active"><a href="#banner">Home</a></li>
-                                    <li><a href="#about">Kuliner</a></li>
+                                    <li><a href="#about">Culinary</a></li>
                                     <li><a href="#menus">Menu</a></li>
                                     <li><a href="#our_team">Team</a></li>
-                                    <li><a href="#gallery">Dokumentasi</a></li>
+                                    <li><a href="#gallery">Dokumentation</a></li>
                                 </ul>
                             </div>
                             <!-- end nav-collapse -->
@@ -118,7 +118,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
-                        <h2 class="block-title"> Kuliner India </h2>
+                        <h2 class="block-title"> Kuliner Indonesia</h2>
                         <h3>Pengertian Kuliner: </h3>
                         <p> Dalam perkembangannya, penggunaan istilah kuliner digunakan untuk berbagai macam kegiatan, seperti seni kuliner yaitu seni persiapan, memasak dan penyajian makanan, biasanya dalam bentuk makanan.. </p>
 
@@ -338,7 +338,7 @@
                                     </div>
                                     <div class="text-col">
                                         <h3>Juliansyah</h3>
-                                        <p>Dont judge people by other people's says</p>
+                                        <p>Dont judge people by other people's says.</p>
                                         <ul class="team-social">
                                             <li><a href="https://instagram.com/jullxyi_/"target=_blank><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                                         </ul>
@@ -380,7 +380,7 @@
                                     </div>
                                     <div class="text-col">
                                         <h3>Ruli Yusuf A</h3>
-                                        <p>Disiplin "jembatan antara tujuan dan pencapaian"</p>
+                                        <p>Disiplin "jembatan antara tujuan dan pencapaian".</p>
                                         <ul class="team-social">
                                             <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                                         </ul>
@@ -394,7 +394,7 @@
                                     </div>
                                     <div class="text-col">
                                         <h3>Virna Santika Z</h3>
-                                        <p>Brutal in public,Soptiee in private.</p>
+                                        <p>Brutal in public, Soptiee in private.</p>
                                         <ul class="team-social">
                                             <li><a href="https://instagram.com/pirrnaaa_/"target=_blank><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                                         </ul>
@@ -409,7 +409,7 @@
                                     </div>
                                     <div class="text-col">
                                         <h3>XI RPL 1</h3>
-                                        <p>Selain baik,Kelas ini tidak bersircle-sircle.</p>
+                                        <p>Selain baik, Kelas ini tidak bersircle-sircle.</p>
                                         <ul class="team-social">
                                             <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                                         </ul>
