--- a/index.html
+++ b/index.html
@@ -405,13 +405,13 @@
                             <div class="col-md-4 col-sm-6">
                                 <div class="sf-team">
                                     <div class="thumb">
-                                        <a href="#"><img src="images/IMG-20220911-WA0029.jpg" alt=""></a>
+                                        <a href="https://www.instagram.com/sftware_engineering1/"target=_blank><img src="images/IMG-20220911-WA0029.jpg" alt=""></a>
                                     </div>
                                     <div class="text-col">
                                         <h3>XI RPL 1</h3>
                                         <p>Selain baik, Kelas ini tidak bersircle-sircle.</p>
                                         <ul class="team-social">
-                                            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                            <li><a href="https://www.instagram.com/sftware_engineering1/"target=_blank><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
